--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -115,7 +115,7 @@
         </div>
         <div style="padding-top: 30px;">Short URL: {{shortURL}}</div>
 
-
+<div>
 <h1>URLs Available</h1>
 
 <table id="urls">
@@ -133,5 +133,6 @@
     <td>{{item.hitcount}}</td>
   </tr>
 </table>
+   </div>
 </div>                  
   </body>
